--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,6 +9,8 @@
   <link rel="icon" href="src/icon.jpg" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <!-- Meta Pixel Code -->
   <script>
     !(function (f, b, e, v, n, t, s) {
@@ -50,7 +51,9 @@
     <div class="max-w-6xl m-auto px-4 py-3">
       <div class="flex justify-between items-center gap-4">
         <h1 class="text-4xl font-bold text-[#ffa62b]">BaseCoin</h1>
-        <button onclick="url()" class="text-white text-2xl font-semibold bg-lime-900 hover:bg-lime-700 px-7 sm:px-10 py-2 rounded-full">Join Group </button>
+        <button onclick="ShowPopUp1()"
+          class="text-white text-2xl font-semibold bg-lime-900 hover:bg-lime-700 px-7 sm:px-10 py-2 rounded-full">Join
+          Group </button>
       </div>
     </div>
   </header>
@@ -59,36 +62,52 @@
   <section class=" overflow-hidden">
     <div class="max-w-6xl py-20 mt-10 m-auto p-5 shadow text-[22px] bg-white">
       <div class="leading-[1.1] tracking-wide">
-        <span class="text-[35px] md:text-[50px] text-gray-700 font-bold text-center block tracking-wide">Seize the investment opportunity</span>
-        <span class="text-[35px] md:text-[50px] text-gray-700 font-bold text-center block tracking-wide">in the currency circle and</span>
+        <span class="text-[35px] md:text-[50px] text-gray-700 font-bold text-center block tracking-wide">Seize the
+          investment opportunity</span>
+        <span class="text-[35px] md:text-[50px] text-gray-700 font-bold text-center block tracking-wide">in the currency
+          circle and</span>
 
-        <span class="text-[35px] md:text-[50px] text-gray-700 font-bold text-center block tracking-wide"><ion-icon name="logo-bitcoin" class="text-6xl text-[#fcbf49]"></ion-icon>realize the freedom of wealth in life!</span>
+        <span class="text-[35px] md:text-[50px] text-gray-700 font-bold text-center block tracking-wide"><ion-icon
+            name="logo-bitcoin" class="text-6xl text-[#fcbf49]"></ion-icon>realize the freedom of wealth in life!</span>
 
         <div class="flex flex-wrap justify-center items-center gap-5 mt-5 *:font-bold *:text-center *:block">
-            <span class="text-shadow text-[#ffa62b] text-[30px] md:text-[35px] ">Earn</span>
-            <span class="text-shadow text-anima text-[30px] md:text-[40px] ">$15,000 ~ 35,000+</span>
-            <span class="text-shadow text-[#ffa62b] text-[30px] md:text-[35px] tracking-wider">Profit Every Day</span>
+          <span class="text-shadow text-[#ffa62b] text-[30px] md:text-[35px] ">Earn</span>
+          <span class="text-shadow text-anima text-[30px] md:text-[40px] ">$15,000 ~ 35,000+</span>
+          <span class="text-shadow text-[#ffa62b] text-[30px] md:text-[35px] tracking-wider">Profit Every Day</span>
         </div>
       </div>
 
       <div class="mt-10">
-          <span class="text-4xl font-bold block text-center underline p-1 text-gray-500">We Promise</span>
-          <p class="mt-5 text-[#ffa62b] text-3xl block text-center font-[500]">...Even if "you're new to crypto" Even if “you're new to bitcoin”...</p>
-          <div class="grid md:grid-cols-2 items-center gap-5 mt-5">
-            <div class="text-[20px] lg:text-[22px] md:leading-8 lg:leading-10">
-                <p>Do you want to earn <span class="text-[#ffa62b] font-semibold">300%~900%↑</span> every day in the crypto market?</p>
-                <p> Join our trading signals group on you phone. <span class="text-[#ffa62b] font-semibold">Easy Steps.</span></p>
-                <p>We'll help you easily increase your wealth by <span class="text-[#ffa62b] font-semibold">more than 500%↑</span>, in just one day, with just one brave attempt.</p>
-                <p>We'll share daily trading plans with more than 300%↑ profit, <span class="text-[#ffa62b] font-semibold">you just need</span> to follow and get $10,000↑ profit every day.</p>
-                <p> Click the link below to <span class="text-[#ffa62b] font-semibold">start multiplying</span> your wealth now!</p>
+        <span class="text-4xl font-bold block text-center underline p-1 text-gray-500">We Promise</span>
+        <p class="mt-5 text-[#ffa62b] text-3xl block text-center font-[500]">...Even if "you're new to crypto" Even if
+          “you're new to bitcoin”...</p>
+        <div class="grid md:grid-cols-2 gap-5 mt-5">
+          <div class="text-[20px] lg:text-[22px] md:leading-8 lg:leading-10">
+            <p>Do you want to earn <span class="text-[#ffa62b] font-semibold">300%~900%↑</span> every day in the crypto
+              market?</p>
+            <p> Join our trading signals group on you phone. <span class="text-[#ffa62b] font-semibold">Easy
+                Steps.</span></p>
+            <p>We'll help you easily increase your wealth by <span class="text-[#ffa62b] font-semibold">more than
+                500%↑</span>, in just one day, with just one brave attempt.</p>
+            <p>We'll share daily trading plans with more than 300%↑ profit, <span
+                class="text-[#ffa62b] font-semibold">you just need</span> to follow and get $10,000↑ profit every day.
+            </p>
+            <p> Click the link below to <span class="text-[#ffa62b] font-semibold">start multiplying</span> your wealth
+              now!</p>
+            <img src="./src/1.jpg">
+          </div>
+          <div>
+            <div class="flex justify-center m-auto max-w-[500px] w-full lg:w-8/12 rounded-xl overflow-hidden">
+              <video src="./video/video.mp4" loop autoplay controls autobuffer playsinline></video>
             </div>
-              <div><img src="./src/1.jpg"></div>
           </div>
-          <div class="grid md:grid-cols-3 gap-5 mt-10">
-              <div><img src="./src/b1.jpg"></div>
-              <div><img src="./src/b2.jpg"></div>
-              <div><img src="./src/b3.jpg"></div>
-          </div>
+
+        </div>
+        <div class="grid md:grid-cols-3 gap-5 mt-10">
+          <div><img src="./src/b1.jpg"></div>
+          <div><img src="./src/b2.jpg"></div>
+          <div><img src="./src/b3.jpg"></div>
+        </div>
       </div>
 
       <!-- market -->
@@ -102,17 +121,13 @@
           $87.22B, which makes a 39.57% increase. The total volume in DeFi is
           currently $4.58B, 5.25% of the total crypto market 24-hour volume.
         </p>
-        <div class="flex justify-center m-auto pt-10 shadow bg-gray-800">
-          <video controls muted class="sm:w-10/12">
-            <source src="video/video.mp4" type="video/mp4" />
-          </video>
-        </div>
       </div>
 
       <!-- hero -->
       <div class="grid md:grid-cols-2 gap-5 mt-10 items-center">
         <div class="">
-          <h2 class="text-4xl sm:text-5xl font-bold leading-tight text-lime-900 md:text-start">Track your Coins and NFTs with</h2>
+          <h2 class="text-4xl sm:text-5xl font-bold leading-tight text-lime-900 md:text-start">Track your Coins and NFTs
+            with</h2>
           <span class="text-4xl font-medium text-green-500">BaseCoin Portfolio</span>
           <p class="py-10 md:text-start text-gray-700">
             Whether you’re just observing the crypto market or meticulously
@@ -130,7 +145,7 @@
       <div class="mt-32">
         <div class="flex flex-col-reverse md:grid md:grid-cols-2 grid-cols-1 md:gap-2 gap-10">
           <div class="flex justify-center">
-            <img src="src/1.webp" alt=""/>
+            <img src="src/1.webp" alt="" />
           </div>
           <div class="">
             <h2 class="text-4xl font-bold leading-tight text-lime-900">
@@ -309,29 +324,29 @@
             </div>
           </article>
 
-            <article class="bg-black text-white rounded-3xl flex flex-col overflow-hidden">
-              <div class="p-5">
-                <span class="text-lg font-medium bg-[#2E2F30] py-1 px-3 rounded-md">BASECOIN SPOTLIGHT</span>
-                <h2 class="text-2xl font-semibold leading-tight">
-                  Meet the new stars on the crypto horizon
-                </h2>
-              </div>
-              <div class="mt-2">
-                <img src="src/9.png" alt="" />
-              </div>
-            </article>
-            
-            <article class="bg-[#28D180] text-white rounded-3xl flex flex-col overflow-hidden">
-              <div class="p-5">
-                <span class="text-lg font-medium bg-[#3ED68D] py-1 px-3 rounded-md">SECURITY</span>
-                <h2 class="text-2xl font-semibold leading-tight">
-                  Best-in-class security
-                </h2>
-              </div>
-              <div class="mt-20">
-                <img src="src/9.png" alt="" />
-              </div>
-            </article>
+          <article class="bg-black text-white rounded-3xl flex flex-col overflow-hidden">
+            <div class="p-5">
+              <span class="text-lg font-medium bg-[#2E2F30] py-1 px-3 rounded-md">BASECOIN SPOTLIGHT</span>
+              <h2 class="text-2xl font-semibold leading-tight">
+                Meet the new stars on the crypto horizon
+              </h2>
+            </div>
+            <div class="mt-2">
+              <img src="src/9.png" alt="" />
+            </div>
+          </article>
+
+          <article class="bg-[#28D180] text-white rounded-3xl flex flex-col overflow-hidden">
+            <div class="p-5">
+              <span class="text-lg font-medium bg-[#3ED68D] py-1 px-3 rounded-md">SECURITY</span>
+              <h2 class="text-2xl font-semibold leading-tight">
+                Best-in-class security
+              </h2>
+            </div>
+            <div class="mt-20">
+              <img src="src/9.png" alt="" />
+            </div>
+          </article>
         </div>
       </div>
       <!-- Boost -->
@@ -348,7 +363,7 @@
           recorded on a blockchain, an unchangeable ledger that tracks and
           records assets and trades
         </p>
-        
+
         <div class="grid md:grid-cols-2 grid-cols-1 gap-5 mt-20 text-white">
           <article class="rounded-xl overflow-hidden">
             <div class="">
@@ -430,13 +445,80 @@
   </footer>
   <!-- end of footer -->
 
-  <script>
-    function url() {
-      fbq("track", "Purchase");
-      fbq("track", "SubmitApplication");
-      location.href = "https://chat.whatsapp.com/F34VY79BW4S6pQmT2SNz9j";
-    }
-  </script>
+  <!-- popup1 -->
+  <div class="popup1 w-full h-screen bg-[#0a0908]/65 hidden justify-center items-center fixed top-0 left-0 p-3"
+    id="PopUp1">
+    <div class="box max-w-[668px] w-full bg-white p-6 sm:px-8 rounded-lg relative">
+      <button class="absolute top-3 right-3 text-red-600 text-2xl"><ion-icon onclick="HidePopUp()" name="close"
+          class="border border-white shadow"></ion-icon></button>
+      <div class="text-lg text-gray-700 py-5 font-[500] flex gap-1">
+        <div><ion-icon name="arrow-redo" class="text-xl text-[#fcbf49] mt-1"></ion-icon></div>
+        <p>Only for cryptocurrency investors, because our discussion cryptocurrency group is a high -end investor  share
+          group, investors who have not registered cryptocurrency wallets don't enter please</p>
+      </div>
+      <div
+        class="flex justify-between items-center tracking-wider text-lg text-white font-semibold *:text-center gap-4 *:w-full *:text-md *:py-2.5 *:rounded-lg  *:cursor-pointe">
+        <button onClick="ShowPopUp2()" class="bg-[#2a8220]">
+          Yes
+        </button>
+        <button onclick="amazonUrl()" class="bg-red-500">
+          No
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <!-- popup2 -->
+  <div class="popup2 w-full h-screen bg-[#00000056] hidden justify-center items-center fixed top-0 left-0 p-3"
+    id="PopUp2">
+    <div class="box max-w-[668px] w-full bg-white p-6 sm:px-8 rounded-lg relative">
+      <button class="absolute top-3 right-3 text-red-600 text-2xl"><ion-icon onclick="HidePopUp()" name="close"
+          class="border border-white shadow"></ion-icon></button>
+      <div class="text-lg text-gray-700 py-5 font-[500] flex gap-1">
+        <div><ion-icon name="arrow-redo" class="text-xl text-[#fcbf49] mt-1"></ion-icon></div>
+        <p>After joining the discussion group, please take the initiative to contact the assistant for free
+          cryptocurrency trading strategies and market updates</p>
+      </div>
+      <div
+        class="flex flex-col sm:flex-row justify-between items-center tracking-wider text-white font-semibold *:text-center gap-5 sm:gap-4 *:w-full text-lg *:py-2.5 *:rounded-lg  *:cursor-pointer">
+        <button onclick="url()" class="bg-[#2a8220]">
+          Yes, I want to join the group
+        </button>
+        <button onclick="amazonUrl()" class="bg-red-500">
+          Sorry, I'm not interested in this
+        </button>
+      </div>
+    </div>
+
+
+    <script>
+      function url() {
+        fbq("track", "Purchase");
+        fbq("track", "SubmitApplication");
+        location.href = "https://chat.whatsapp.com/F34VY79BW4S6pQmT2SNz9j";
+      }
+      function amazonUrl() {
+            location.href = "https://www.amazon.com/";
+        }
+
+        let popup1 = document.getElementById("PopUp1");
+        let popup2 = document.getElementById("PopUp2");
+
+        function togglePopup(showPopup, hidePopup) {
+            showPopup.style.display = "flex";
+            hidePopup.style.display = "none";
+        }
+        function ShowPopUp1() {
+            togglePopup(popup1, popup2);
+        }
+        function ShowPopUp2() {
+            togglePopup(popup2, popup1);
+        }
+        function HidePopUp() {
+            popup1.style.display = "none";
+            popup2.style.display = "none";
+        }
+    </script>
 </body>
 
 </html>
