--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BaseCoin: The crypto trading platform trusted by millions</title>
   <link rel="stylesheet" href="style/style.css" />
-  <link rel="stylesheet" href="src/icon.jpg" />
-  <link rel="icon" href="src/icon.jpg" />
+  <link rel="icon" href="src/icon.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
   <script src="https://cdn.tailwindcss.com"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
